objects/Issue__c.object
<CustomObject>
    <description>The object for tracking issues/defects.</description>
    <fields>
        <fullName>Actor__c</fullName>
        <label>Actor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Results__c</fullName>
        <label>Actual Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Build_Version__c</fullName>
        <description>Item is planned for release in this build.</description>
        <inlineHelpText>Item is planned for release in this build.</inlineHelpText>
        <label>Build/Version</label>
        <picklist>
            <picklistValues>
                <fullName>Hot Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <description>This field captures the functional area impacted by this issue.</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Book Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - Galley Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - Marketing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - MDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - PSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - Cover Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X - Data Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X - Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X - Web Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Script Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_OU__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Encountered__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Encountered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Encountered__c</fullName>
        <description>The date/time when the issue was first encountered.</description>
        <inlineHelpText>The date/time when the issue was first encountered.</inlineHelpText>
        <label>Date/Time Encountered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Note__c</fullName>
        <description>Developer notes regarding the issue, dependencies, etc</description>
        <inlineHelpText>Developer notes regarding the issue, dependencies, etc</inlineHelpText>
        <label>Developer Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Completion__c</fullName>
        <description>The expected development completion date.</description>
        <inlineHelpText>The expected development completion date.</inlineHelpText>
        <label>Expected Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Recruiting Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activating Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Partner Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Partner Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewing Partner Status and Financials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewing and Updating Annual Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measuring Customer &amp; Partner Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Assignment Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service &amp; Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Partner Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Partner MDTF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMA Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impacted_Systems__c</fullName>
        <description>The systems involved in correcting this issue</description>
        <inlineHelpText>The systems involved in correcting this issue</inlineHelpText>
        <label>Impacted Systems</label>
        <picklist>
            <picklistValues>
                <fullName>ACB Paranet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catsweb/CAPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco Call Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Direct Worldwide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Echosign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MapPoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle EBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinnacle Smartstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plateau LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostCode Anywhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clicktools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal - Design Tools</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Issue_Number__c</fullName>
        <description>Unique identifier for an issue</description>
        <displayFormat>I-{0000}</displayFormat>
        <inlineHelpText>Unique identifier for an issue</inlineHelpText>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Must_Have__c</fullName>
        <label>Must Have</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nice_To_Have__c</fullName>
        <label>Nice To Have</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Required: Must have for Go Live
Workaround: Manual workaround possible
Non Critical: Can wait post Go Live</description>
        <inlineHelpText>Required: Must have for Go Live
Workaround: Manual workaround possible
Non Critical: Can wait post Go Live</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Critical</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Requester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Note__c</fullName>
        <description>Description of the solution</description>
        <inlineHelpText>Description of the solution</inlineHelpText>
        <label>Resolution Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>How severe is the defect?</description>
        <inlineHelpText>How severe is the defect?</inlineHelpText>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Low</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working As Designed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Description__c</fullName>
        <label>Step Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Step_Name__c</fullName>
        <label>Step Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SunPower_Comments__c</fullName>
        <description>SunPower Comments</description>
        <label>SunPower Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Script_ID__c</fullName>
        <description>The id of the test script where the issue was discovered</description>
        <inlineHelpText>The id of the test script where the issue was discovered</inlineHelpText>
        <label>Test Script ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <label>Tester</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assignee</description>
        <inlineHelpText>Assignee</inlineHelpText>
        <label>Assigned To 2:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Implementer2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assignee</description>
        <inlineHelpText>Assignee</inlineHelpText>
        <label>Assigned To 3:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assignee</description>
        <inlineHelpText>Assignee</inlineHelpText>
        <label>Assigned To 4:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Issue (OLD)</label>
    <nameField>
        <label>Issue Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>